--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 </div></a>
                 <div class="header__menu menu">
                     <ul class="menu__list">
-                        <a href="#"></a><li class="menu__item">Home</li></a>
-                        <a href="#"></a><li class="menu__item">Contact</li></a>
-                        <a href="#"></a><li class="menu__item">Location</li></a>
+                        <a href="#"><li class="menu__item">Home</li></a>
+                        <a href="#"><li class="menu__item">Contact</li></a>
+                        <a href="#"><li class="menu__item">Location</li></a>
                         <a href="#"><li class="menu__item">About Us</li></a>
                     </ul>
                 </div>
