--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 </div></a>
                 <div class="header__menu menu">
                     <ul class="menu__list">
-                        <a href="#"><li class="menu__item">Home</li></a>
-                        <a href="#"><li class="menu__item">Contact</li></a>
-                        <a href="#"><li class="menu__item">Location</li></a>
+                        <a href="#"></a><li class="menu__item">Home</li></a>
+                        <a href="#"></a><li class="menu__item">Contact</li></a>
+                        <a href="#"></a><li class="menu__item">Location</li></a>
                         <a href="#"><li class="menu__item">About Us</li></a>
                     </ul>
                 </div>
@@ -42,7 +42,7 @@
                                 of art.</div>
                             <div class="block__btn btn">Let’s go</div>
                         </div>
-                       <img src="img/page-1/image.jpg" alt="" class="get-inspiration__img "> 
+                        <img src="img/page-1/image.jpg" alt="" class="get-inspiration__img "> 
                     </div>
                 </div>
             </section>
@@ -102,12 +102,13 @@
                                     de gamut of arrangements.</div>
                                 <img src="img/page-4/image-1.jpg" alt="" class="item__img">
                             </div>
-                            <div class="carts__item">
-                                <img src="img/page-4/image-2.jpg" alt="" class="item__img">
+                            <div class="carts__item item-reverse">
+
                                 <div class="item__h2-title h2-title color-blue">Project workspace</div>
                                 <div class="item__text text">A simple guide to create the perfect livingro-
                                     om for . Night Watc works beautifully in a wi-
                                     de gamut of arrangements.</div>
+                                <img src="img/page-4/image-2.jpg" alt="" class="item__img">
                             </div>
                             <div class="carts__item">
                                 <div class="item__h2-title h2-title color-blue">Library</div>
