--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 </div></a>
                 <div class="header__menu menu">
                     <ul class="menu__list">
-                        <a href="#"></a><li class="menu__item">Home</li></a>
-                        <a href="#"></a><li class="menu__item">Contact</li></a>
-                        <a href="#"></a><li class="menu__item">Location</li></a>
+                        <a href="#"><li class="menu__item">Home</li></a>
+                        <a href="#"><li class="menu__item">Contact</li></a>
+                        <a href="#"><li class="menu__item">Location</li></a>
                         <a href="#"><li class="menu__item">About Us</li></a>
                     </ul>
                 </div>
@@ -40,7 +40,7 @@
                                 lands to art and aesthetics. With us, you will get 
                                 a residentical design with an extraordinary touch 
                                 of art.</div>
-                            <div class="block__btn btn">Let’s go</div>
+                            <button class="block__btn btn">Let’s go</button>
                         </div>
                         <img src="img/page-1/image.jpg" alt="" class="get-inspiration__img "> 
                     </div>
@@ -126,10 +126,18 @@
                     <div class="testimonial__container _container">
                         <div class="testimonial__title title">Testimonial</div>
                         <div class="testimonial__companies">
-                            <a href="#" class="companies__link"><img src="img/page-5/image-1.jpg" alt="" class="companies__item"></a>
-                            <a href="#" class="companies__link"><img src="img/page-5/image-2.jpg" alt="" class="companies__item"></a>
-                            <a href="#" class="companies__link"><img src="img/page-5/image-3.jpg" alt="" class="companies__item"></a>
-                            <a href="#" class="companies__link"><img src="img/page-5/image-4.jpg" alt="" class="companies__item"></a>
+                            <a href="#" class="companies__link">
+                                <img src="img/page-5/image-1.jpg" alt="" class="companies__item">
+                            </a>
+                            <a href="#" class="companies__link">
+                                <img src="img/page-5/image-2.jpg" alt="" class="companies__item">
+                            </a>
+                            <a href="#" class="companies__link">
+                                <img src="img/page-5/image-3.jpg" alt="" class="companies__item">
+                            </a>
+                            <a href="#" class="companies__link">
+                                <img src="img/page-5/image-4.jpg" alt="" class="companies__item">
+                            </a>
                         </div>
                         <div class="testimonial__statistics">
                             <img src="img/page-5/image-5.jpg" alt="" class="statistic__img">
